tests/testdata/allow-ingress-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - {}
